Dev part for getting endpoints for connecting to frontend.